@@ -1,81 +1,83 @@
-/**
- * Copyright 2011 Adrian Stabiszewski, as@nfctools.org
- *
+/***************************************************************************
+ * 
+ * This file is part of the 'NDEF Tools for Android' project at
+ * http://code.google.com/p/ndef-tools-for-android/
+ * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ * 
+ ****************************************************************************/
 
-package org.ndeftools.test;
+package org.ndeftools;
 
 import java.nio.charset.Charset;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
 import junit.framework.TestCase;
 
-import org.nfctools.ndef.NdefConstants;
+import org.ndeftools.AbsoluteUriRecord;
+import org.ndeftools.EmptyRecord;
+import org.ndeftools.Message;
+import org.ndeftools.MimeRecord;
+import org.ndeftools.Record;
+import org.ndeftools.UnknownRecord;
+import org.ndeftools.UnsupportedRecord;
+import org.ndeftools.externaltype.AndroidApplicationRecord;
+import org.ndeftools.wellknown.Action;
+import org.ndeftools.wellknown.ActionRecord;
+import org.ndeftools.wellknown.GcActionRecord;
+import org.ndeftools.wellknown.GcDataRecord;
+import org.ndeftools.wellknown.GcTargetRecord;
+import org.ndeftools.wellknown.GenericControlRecord;
+import org.ndeftools.wellknown.SignatureRecord;
+import org.ndeftools.wellknown.SignatureRecord.CertificateFormat;
+import org.ndeftools.wellknown.SignatureRecord.SignatureType;
+import org.ndeftools.wellknown.SmartPosterRecord;
+import org.ndeftools.wellknown.TextRecord;
+import org.ndeftools.wellknown.UriRecord;
+import org.ndeftools.wellknown.handover.AlternativeCarrierRecord;
+import org.ndeftools.wellknown.handover.AlternativeCarrierRecord.CarrierPowerState;
+import org.ndeftools.wellknown.handover.CollisionResolutionRecord;
+import org.ndeftools.wellknown.handover.ErrorRecord;
+import org.ndeftools.wellknown.handover.ErrorRecord.ErrorReason;
+import org.ndeftools.wellknown.handover.HandoverCarrierRecord;
+import org.ndeftools.wellknown.handover.HandoverCarrierRecord.CarrierTypeFormat;
+import org.ndeftools.wellknown.handover.HandoverRequestRecord;
+import org.ndeftools.wellknown.handover.HandoverSelectRecord;
 import org.nfctools.ndef.NdefContext;
 import org.nfctools.ndef.NdefDecoder;
-import org.nfctools.ndef.NdefEncoder;
-import org.nfctools.ndef.Record;
-import org.nfctools.ndef.auri.AbsoluteUriRecord;
-import org.nfctools.ndef.empty.EmptyRecord;
-import org.nfctools.ndef.ext.AndroidApplicationRecord;
-import org.nfctools.ndef.ext.GeoRecord;
-import org.nfctools.ndef.mime.BinaryMimeRecord;
-import org.nfctools.ndef.mime.TextMimeRecord;
-import org.nfctools.ndef.unknown.UnknownRecord;
-import org.nfctools.ndef.unknown.unsupported.UnsupportedRecord;
-import org.nfctools.ndef.wkt.handover.records.AlternativeCarrierRecord;
-import org.nfctools.ndef.wkt.handover.records.AlternativeCarrierRecord.CarrierPowerState;
-import org.nfctools.ndef.wkt.handover.records.CollisionResolutionRecord;
-import org.nfctools.ndef.wkt.handover.records.ErrorRecord;
-import org.nfctools.ndef.wkt.handover.records.ErrorRecord.ErrorReason;
-import org.nfctools.ndef.wkt.handover.records.HandoverCarrierRecord;
-import org.nfctools.ndef.wkt.handover.records.HandoverCarrierRecord.CarrierTypeFormat;
-import org.nfctools.ndef.wkt.handover.records.HandoverRequestRecord;
-import org.nfctools.ndef.wkt.handover.records.HandoverSelectRecord;
-import org.nfctools.ndef.wkt.records.Action;
-import org.nfctools.ndef.wkt.records.ActionRecord;
-import org.nfctools.ndef.wkt.records.GcActionRecord;
-import org.nfctools.ndef.wkt.records.GcDataRecord;
-import org.nfctools.ndef.wkt.records.GcTargetRecord;
-import org.nfctools.ndef.wkt.records.GenericControlRecord;
-import org.nfctools.ndef.wkt.records.SignatureRecord;
-import org.nfctools.ndef.wkt.records.SignatureRecord.CertificateFormat;
-import org.nfctools.ndef.wkt.records.SignatureRecord.SignatureType;
-import org.nfctools.ndef.wkt.records.SmartPosterRecord;
-import org.nfctools.ndef.wkt.records.TextRecord;
-import org.nfctools.ndef.wkt.records.UriRecord;
 
+import android.nfc.FormatException;
+import android.nfc.NdefMessage;
+import android.nfc.NdefRecord;
 import android.util.Log;
-
 
 /**
  * 
- * Encode using nfctools decode using ndeftools
+ * Encode using ndeftools decode using nfctools
  * 
  * @author Thomas Rorvik Skjolberg (skjolber@gmail.com)
  * 
  */
 
-public class NFCToolsEncodeCompatibilityTest extends TestCase {
+public class NFCToolsDecodeCompatibilityTest extends TestCase {
 
 	private static AbsoluteUriRecord absoluteUriRecord = new AbsoluteUriRecord("http://absolute.url");
 	private static ActionRecord actionRecord = new ActionRecord(Action.SAVE_FOR_LATER);
 	private static AndroidApplicationRecord androidApplicationRecord = new AndroidApplicationRecord("com.skjolberg.nfc");
 	private static EmptyRecord emptyRecord = new EmptyRecord();
-	private static TextMimeRecord textMimeRecord = new TextMimeRecord("text/xml; charset=utf-8", "abcd...���");
-	private static BinaryMimeRecord binaryMimeRecord = new BinaryMimeRecord("application/binary",
+	private static MimeRecord mimeRecord = new MimeRecord("application/binary",
 			"<?xml version=\"1.0\" encoding=\"utf-8\"?><manifest xmlns:android=\"http://schemas.android.com/apk/res/android\" />"
 					.getBytes());
 	private static SmartPosterRecord smartPosterRecord = new SmartPosterRecord(new TextRecord("Title message",
@@ -97,31 +99,23 @@ public class NFCToolsEncodeCompatibilityTest extends TestCase {
 	private static SignatureRecord signatureRecord = new SignatureRecord(SignatureRecord.SignatureType.NOT_PRESENT, new byte[]{0x00, 0x01, 0x10, 0x11}, CertificateFormat.X_509, "http://certificate.uri");
 	private static SignatureRecord signatureRecordMarker = new SignatureRecord(SignatureRecord.SignatureType.NOT_PRESENT);
 	
-	private static UnsupportedRecord unsupportedRecord = new UnsupportedRecord(NdefConstants.TNF_RESERVED, "abc".getBytes(), "id".getBytes(), "DEF".getBytes());
-	private static GeoRecord addressInformationGeoRecord = new GeoRecord("Oslo");
-	private static GeoRecord coordinatesGeoRecord = new GeoRecord(59.949444, 10.756389);
-	private static GeoRecord coordinatesAltitudeGeoRecord = new GeoRecord(59.949444, 10.756389, 100.0);
+	private static UnsupportedRecord unsupportedRecord = new UnsupportedRecord(NdefRecord.TNF_WELL_KNOWN, "abc".getBytes(), "id".getBytes(), "DEF".getBytes());
 	
 	private static GcActionRecord gcActionRecordAction = new GcActionRecord(Action.SAVE_FOR_LATER);
 	private static GcActionRecord gcActionRecordRecord = new GcActionRecord(new ActionRecord(Action.SAVE_FOR_LATER));
 	private static GcDataRecord gcDataRecord = new GcDataRecord();
 	private static GcTargetRecord gcTargetRecord = new GcTargetRecord(new UriRecord("http://ndef.com"));
 	private static GenericControlRecord genericControlRecord = new GenericControlRecord(gcTargetRecord, (byte)0x0);
-	
 
 	public static Record[] records = new Record[] { absoluteUriRecord, actionRecord, androidApplicationRecord,
-			emptyRecord, textMimeRecord, binaryMimeRecord, smartPosterRecord, textRecord, unknownRecord, uriRecord,
+			emptyRecord, mimeRecord, textRecord, uriRecord, smartPosterRecord, unknownRecord,
 			collisionResolutionRecord, errorRecord,
 			alternativeCarrierRecord, handoverSelectRecord, handoverCarrierRecord, handoverRequestRecord,
 			
 			signatureRecordMarker, signatureRecord,
 			
-			
-			addressInformationGeoRecord, coordinatesGeoRecord, coordinatesAltitudeGeoRecord,
-			
 			gcActionRecordAction, gcActionRecordRecord, gcDataRecord, gcTargetRecord, genericControlRecord
 			};
-
 
 	static {
 		// handover request record requires at least on alternative carrier record
@@ -137,10 +131,10 @@ public class NFCToolsEncodeCompatibilityTest extends TestCase {
 		handoverRequestRecord.add(alternativeCarrierRecord);
 
 		handoverSelectRecord.add(alternativeCarrierRecord);
-		handoverSelectRecord.setError(new ErrorRecord(ErrorReason.PermanenteMemoryConstraints, new Long(1L)));
+		handoverSelectRecord.setError(new ErrorRecord(ErrorReason.PermanenteMemoryConstraints, Long.valueOf(1L)));
 		
 		// add some certificates to signature
-		signatureRecord.addCertificate(new byte[]{0x00, 0x10, 0x11});
+		signatureRecord.add(new byte[]{0x00, 0x10, 0x11});
 		signatureRecord.setSignatureType(SignatureType.RSASSA_PSS_SHA_1);
 		signatureRecord.setSignature(new byte[]{0x01, 0x11, 0x12});
 		
@@ -154,20 +148,21 @@ public class NFCToolsEncodeCompatibilityTest extends TestCase {
 
 	}
 
-	public void testCompatibility() throws Exception {
+	public void testCompatibility() throws FormatException {
 		
-		NdefEncoder ndefMessageEncoder = NdefContext.getNdefEncoder();
+		NdefDecoder ndefMessageDecoder = NdefContext.getNdefDecoder();
 
 		// individually
 		for (Record record : records) {
-			byte[] ndefMessageBytes = ndefMessageEncoder.encode(record);
+			NdefMessage message = new NdefMessage(new NdefRecord[]{record.getNdefRecord()});
+			
+			byte[] ndefMessageBytes = message.toByteArray();
 			
 			try {
-				List<org.ndeftools.Record> list = org.ndeftools.Message.parseNdefMessage(ndefMessageBytes);
+				org.nfctools.ndef.Record decodeToRecord = ndefMessageDecoder.decodeToRecord(ndefMessageBytes);
 				
-				if(list.size() != 1) {
-					fail("Expected list size 1, not " + list.size());
-				}
+				Log.d(getClass().getSimpleName(), "Found " + decodeToRecord.getClass().getSimpleName());
+
 			} catch(Exception e) {
 				Log.d(getClass().getSimpleName(), record.getClass().getSimpleName(), e);
 				
@@ -176,4 +171,5 @@ public class NFCToolsEncodeCompatibilityTest extends TestCase {
 		}
 
 	}
+	
 }
